# oauth_api_demo

./: .gitignore  pyproject.toml  render.yaml
admin/: settings.py  urls.py
oauth_server/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
oauth_server/migrations/: 0001_initial.py
